tests/ast_interpreter/err_type_neg.expected
<string>:2:5: error: unary negation cannot be applied to Bool
    -true;
    ^
